# pipedrive-python

./: README.md  pyproject.toml  setup.py
pipedrive/: activities.py  client.py  deals.py  exceptions.py  filters.py  items.py  leads.py  notes.py  organizations.py  persons.py  pipelines.py  products.py  projects.py  recents.py  stages.py  subscriptions.py  test.py  users.py  webhooks.py
